5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1798_2564.log
== TEST (2019-06-05 13:47:34) 
-- CODE:
from numpy import*
g = array(eval(input("numero de gols: ")))
ga = array(eval(input("gols do time adversario: ")))
i = 0
while (i < size(g)):
	v = 0 
	e = 0
	d = 0
	for partida in g and ga:
		
-- ERROR:
File "XXXX", line 11
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 23:04:43) 
-- CODE:
from numpy import*
g = array(eval(input("numero de gols: ")))
ga = array(eval(input("gols do time adversario: ")))
v = zeros(g, d type=int)
t = []
i = 0
vi = 0
e = 0
d = 0
while (i < size(g)):
	if (g[i] > ga[i]):
		vi = vi + 1
		
	elif (g[i] = ga[i]):
		e = e + 1
		
	elif (g[i] < ga[i]):
		d = d + 1
	i = i + 1
j = t.appennd(vi, e, d)
print(j)
		
		


		

		
-- ERROR:
File "XXXX", line 4
    v = zeros(g, d type=int)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 23:05:16) 
-- CODE:
from numpy import*
g = array(eval(input("numero de gols: ")))
ga = array(eval(input("gols do time adversario: ")))
v = zeros(g, dtype=int)
t = []
i = 0
vi = 0
e = 0
d = 0
while (i < size(g)):
	if (g[i] > ga[i]):
		vi = vi + 1
		
	elif (g[i] = ga[i]):
		e = e + 1
		
	elif (g[i] < ga[i]):
		d = d + 1
	i = i + 1
j = t.appennd(vi, e, d)
print(j)
		
		


		

		
-- ERROR:
File "XXXX", line 14
    elif (g[i] = ga[i]):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 23:05:49) 
-- CODE:
from numpy import*
g = array(eval(input("numero de gols: ")))
ga = array(eval(input("gols do time adversario: ")))
v = zeros(g, dtype=int)
t = []
i = 0
vi = 0
e = 0
d = 0
while (i < size(g)):
	if (g[i] > ga[i]):
		vi = vi + 1
		
	elif (g[i] == ga[i]):
		e = e + 1
		
	elif (g[i] < ga[i]):
		d = d + 1
	i = i + 1
j = t.appennd(vi, e, d)
print(j)
		
		


		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 23:11:00) 
-- CODE:
from numpy import*
g = array(eval(input("numero de gols: ")))
ga = array(eval(input("gols do time adversario: ")))
j = zeros(3, dtype=int)
i = 0

while (i < size(g)):
	if (g[i] > ga[i]):
		j[0] = j[0] + 1
		
	elif (g[i] == ga[i]):
		j[1] = j[1] + 1
		
	elif (g[i] < ga[i]):
		j[2] = j[2] + 1
	
	i = i + 1
print(j)
		
		


		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 23:11:44) 
-- CODE:
from numpy import*
g = array(eval(input("numero de gols: ")))
ga = array(eval(input("gols do time adversario: ")))
j = zeros(3, dtype=int)
i = 0

while (i < size(g)):
	if (g[i] > ga[i]):
		j[0] = j[0] + 1
		
	elif (g[i] == ga[i]):
		j[1] = j[1] + 1
		
	elif (g[i] < ga[i]):
		j[2] = j[2] + 1
	
	i = i + 1
print(j)
		
		


		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 23:12:50) 
-- CODE:
from numpy import*
g = array(eval(input("numero de gols: ")))
ga = array(eval(input("gols do time adversario: ")))
j = zeros(3, dtype=int)
i = 0

while (i < size(g)):
	if (g[i] > ga[i]):
		j[0] = j[0] + 1
		
	elif (g[i] == ga[i]):
		j[1] = j[1] + 1
		
	elif (g[i] < ga[i]):
		j[2] = j[2] + 1
	
	i = i + 1
print(j)
		
		


		

		
-- EXECUTION TIME:
1.06685
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
